fix button not hidden on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,15 @@ button {
   margin: 0;
 }
 
+@media (max-width: 480px) {
+  .create-event-button {
+    position: absolute;
+    top: 6.8rem;
+    right: 3rem;
+    font-size: 10px;
+  }
+}
+
 /* Profile and menu */
 .profile-img {
   border-radius: 50%;
